platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_105.platter
prepare piece of serving () {
        serving of server; server; }

start() {
}
